--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
   "dependencies": {
     "bootstrap": "^4.0.0",
     "bootstrap-social": "^5.1.1",
+    "browser-sync": "^2.26.12",
     "font-awesome": "^4.7.0",
     "grunt": "^1.3.0",
     "grunt-browser-sync": "^2.2.0",
@@ -46,6 +47,8 @@
     "grunt-contrib-imagemin": "^4.0.0",
     "grunt-contrib-watch": "^1.1.0",
     "grunt-sass": "^3.1.0",
+    "gulp": "^4.0.2",
+    "gulp-sass": "^4.1.0",
     "jit-grunt": "^0.10.0",
     "jquery": "^3.3.1",
     "popper.js": "^1.12.9",
