--- a/package.json
+++ b/package.json
@@ -20,12 +20,20 @@
   "license": "ISC",
   "devDependencies": {
     "cssmin": "^0.4.3",
+    "del": "^6.0.0",
     "grunt-contrib-concat": "^1.0.1",
     "grunt-contrib-cssmin": "^3.0.0",
     "grunt-contrib-htmlmin": "^3.1.0",
     "grunt-contrib-uglify": "^5.0.0",
     "grunt-filerev": "^2.3.1",
     "grunt-usemin": "^3.1.1",
+    "gulp-clean-css": "^4.3.0",
+    "gulp-flatmap": "^1.0.2",
+    "gulp-htmlmin": "^5.0.1",
+    "gulp-imagemin": "^7.1.0",
+    "gulp-rev": "^9.0.0",
+    "gulp-uglify": "^3.0.2",
+    "gulp-usemin": "^0.3.30",
     "htmlmin": "0.0.7",
     "lite-server": "^2.3.0",
     "node-sass": "^4.14.1",
